# inshorts.cli

./: README.md  inshorts.py  pyproject.toml  scrapper.py
