[tool.poetry]
name = "inshorts"
version = "2021.1"
description = "cli for inshorts"
authors = ["Sayan Goswami <goswami.sayan47@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"
click = "^7.1.2"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
